recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: not found: type int
    var p : int = steps
            ^