recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
    var p : int = steps

   	
     if(p!=0){
   	avance(length)
   	gauche(angle)
   	spiral(steps-1,angle,length+increment,increment)
   	p = p-1
   	

   }
  
}
